<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HomeFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="14dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitCenter"
                android:src="@drawable/marvel"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:contentDescription="@string/marvel_logo_description"
                />

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:columnCount="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill_horizontal"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:text="@string/genre_label"
                    android:layout_marginBottom="10dp"
                    />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill_horizontal"
                    android:textSize="18sp"
                    android:text="@string/genre_text"
                    android:layout_marginBottom="10dp"
                    />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill_horizontal"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:text="@string/foundation_label"
                    android:layout_marginBottom="10dp"
                    />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill_horizontal"
                    android:textSize="18sp"
                    android:text="@string/foundation_text"
                    android:layout_marginBottom="10dp"
                    />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill_horizontal"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:text="@string/founders_label"
                    android:layout_marginBottom="10dp"
                    />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill_horizontal"
                    android:textSize="18sp"
                    android:text="@string/founders_text"
                    android:layout_marginBottom="10dp"
                    />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill_horizontal"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:text="@string/headoffice_label"
                    android:layout_marginBottom="10dp"
                    />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill_horizontal"
                    android:textSize="18sp"
                    android:text="@string/headoffice_text"
                    android:layout_marginBottom="10dp"
                    />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill_horizontal"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:text="@string/owner_label"
                    android:layout_marginBottom="10dp"
                    />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill_horizontal"
                    android:textSize="18sp"
                    android:text="@string/owner_text"
                    android:layout_marginBottom="10dp"
                    />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill_horizontal"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:text="@string/chairman_label"
                    android:layout_marginBottom="10dp"
                    />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill_horizontal"
                    android:textSize="18sp"
                    android:text="@string/chairman_text"
                    android:layout_marginBottom="10dp"
                    />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill_horizontal"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:text="@string/keypeople_label"
                    android:layout_marginBottom="10dp"
                    />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill_horizontal"
                    android:textSize="18sp"
                    android:text="@string/keypeople_text"
                    android:layout_marginBottom="10dp"
                    />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill_horizontal"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:text="@string/products_label"
                    android:layout_marginBottom="10dp"
                    />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill_horizontal"
                    android:textSize="18sp"
                    android:text="@string/products_text"
                    android:layout_marginBottom="10dp"
                    />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill_horizontal"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:text="@string/netincome_label"
                    android:layout_marginBottom="10dp"
                    />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill_horizontal"
                    android:textSize="18sp"
                    android:text="@string/netincome_text"
                    android:layout_marginBottom="10dp"
                    />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill_horizontal"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:text="@string/website_label"
                    android:layout_marginBottom="10dp"
                    />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill_horizontal"
                    android:textSize="18sp"
                    android:text="@string/website_text"
                    android:layout_marginBottom="10dp"
                    />

            </GridLayout>

        </LinearLayout>

</ScrollView>